
# Build Aufgabe3
#add_executable(aufgabe_2_und_3
#  aufgabe_2_und_3.cpp
#  )

# Build Aufgabe4
#add_executable(aufgabe_4
#  aufgabe_4.cpp
#  vec2.cpp
#  circle.cpp
#  color.hpp
#  mat2.cpp
#  rectangle.cpp
#  )

#Build Aufgabe6
add_executable(aufgabe_6
  aufgabe_6.cpp
  vec2.cpp
  circle.cpp
  color.hpp
  )


