
# Build Aufgabe3
add_executable(aufgabe_2_und_3
  aufgabe_2_und_3.cpp
  )

# Build Aufgabe4
add_executable(aufgabe_4
  aufgabe_4.cpp
  vec2.cpp
  circle.cpp
  color.hpp
  mat2.cpp
  rectangle.cpp
  )

#Build Aufgabe6
add_executable(aufgabe_6
  aufgabe_6.cpp
  vec2.cpp
  circle.cpp
  color.hpp
  )

#Build Aufgabe9
add_executable(aufgabe_9
 aufgabe_9.cpp
 )

#Build Aufgabe11
add_executable(aufgabe_11
 aufgabe_11.cpp
 )

#Build Aufgabe12
add_executable(aufgabe_12
 aufgabe_12.cpp
 )

#Build Aufgabe13
add_executable(aufgabe_13
 aufgabe_13.cpp
 )

#Build Aufgabe14
add_executable(aufgabe_14
 circle.cpp
 aufgabe_14.cpp
 color.hpp
 vec2.cpp
 )

#Build quick sort
add_executable(quicksort
 quicksort.cpp
 )



